@startuml
class AlgoStar{
-jugadores:List<Jugador>
-turnoActual:int
-idjugadorActual:int
- judagorGanador:Jugador
'-mapa:Mapa
+AlgoStar()
'+AlgoStar(mapa)
+agregarJugador(judador)
+empezarJuego()
+hallarJugadorActual():Jugador
+pasarTurno()
+devolverJugadorGanador():Jugador
}


class Mapa {
-Mapa instancia:Mapa
-terrenos:list<Terreno>
-ubicacionesInicialesDeLosJugadores:List<Coordenada>
-superficie:SuperficieRectangular
'+Mapa(coordenada)
+devolverInstancia():Mapa
-establecerUbicacionesInicialesDeLosJugadores()
+establecerDimension(dimension:Coordenada)
+buscarTerreno(coordenadaDelTerreno):Terreno
-buscarIdDelTerreno(coordenada):int
+buscarTerrenosAdyacente(coordenada,rango:int):List<Terrenos>
+establecerEdificio(coordenada,edificio)
+establecerUnidadEnCoordenadaAdyacente(coordenadaDelEdificio,unidad)
+establecerUnidad(coordenada,unidad)
'+establecerUnidadDelMapa(coordenada,unidad)
+eliminarEdificio(coordenada)
+eliminarUnidad(coordenada)
'+hallarTerrenoADistanciaRelativa(coordenada,direccionX:int,coordenada,direccionY:int):Terreno
'+actualizar(turnoActual:int)
'-actualizarTerrenosConUnidadesVisibles(listaCoordenadasAVisibilizar){
-hallarCoordenadaParaBases():List<Coordenada>
+establecerZanganoInicial(idJugador:int):Zangano
-generarTerrenoInicial()
'-establecerSuperficieYTerrenos(dimension:Coordenada)
'-generarMohoAlrededorDeCriadero(coordenadaDelCriadero)
'-generarMohoAlrededorDeCriaderos(listaCriaderos)
'-generizarTerrenoEnergizadoAlrededorDePilon(coordenadaPilon)
'-generizarTerrenoEnergizadoAlrededorDePilones(listaPilon)
'+cubrirCoordenadasConMoho(listaCoordenadas)
+parseTerrenos():List<ObjectNode>
+parseOcupante():List<ObjectNode>
+toJsonTerrenos():List<ObjectNode>
+toJsonOcupantes():List<ObjectNode>
'+actualizarTerrenosEnergizados(listaPilon)

}


abstract Jugador
abstract Recurso
abstract Terreno



AlgoStar "1" *--left-"2" Jugador
Jugador *-left- Inventario
Jugador .up.>  Mapa
Mapa "1" *-left--"*" Terreno
Mapa -right-> Coordenada


Recurso <|--Suministro
Recurso <|---Minerales
Recurso <|--GasVespeno


Jugador <|-- JugadorProtoss
Jugador <|-- JugadorZerg


Inventario -down->Recurso
@enduml